--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body style="background-image: url(../leaf.jpg); width: 1200px; height: 800px;">
+<body style="background-image: url(leaf.jpg); width: 1200px; height: 800px;">
     <center>
     <h1 style="color: white;"><b>SURVEY FORM</b></h1>
     </center>
